--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
     padding: 0;
     font-family: 'Roboto';   
 }
+main{
+    min-width: 960px;
+    min-height: 100vh;
+    margin: 0 auto;
+    background: rgb(175,179,183);
+    background: -moz-linear-gradient(180deg, rgba(175,179,183,1) 0%, rgba(45,74,83,1) 50%, rgba(13,31,35,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(175,179,183,1) 0%, rgba(45,74,83,1) 50%, rgba(13,31,35,1) 100%);
+    background: linear-gradient(180deg, rgba(175,179,183,1) 0%, rgba(45,74,83,1) 50%, rgba(13,31,35,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#afb3b7",endColorstr="#0d1f23",GradientType=1);    
+    padding: 2rem;
+}
 h1.titulo{
     background-color: #666;
     color: #fff;
