--- a/style.css
+++ b/style.css
@@ -2,18 +2,25 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Roboto';   
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;   
 }
-main{
-    min-width: 960px;
-    min-height: 100vh;
-    margin: 0 auto;
+body{
     background: rgb(175,179,183);
     background: -moz-linear-gradient(180deg, rgba(175,179,183,1) 0%, rgba(45,74,83,1) 50%, rgba(13,31,35,1) 100%);
     background: -webkit-linear-gradient(180deg, rgba(175,179,183,1) 0%, rgba(45,74,83,1) 50%, rgba(13,31,35,1) 100%);
     background: linear-gradient(180deg, rgba(175,179,183,1) 0%, rgba(45,74,83,1) 50%, rgba(13,31,35,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#afb3b7",endColorstr="#0d1f23",GradientType=1);    
-    padding: 2rem;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#afb3b7",endColorstr="#0d1f23",GradientType=1);
+}
+main{
+    min-width: 960px;
+    min-height: 100vh;
+    margin: 0 auto;    
+    padding: 1.5rem;
+}
+header{
+    display: flex;
+    flex-wrap: wrap;
+
 }
 h1.titulo{
     background-color: #666;
@@ -21,13 +28,16 @@ h1.titulo{
     padding: 10px;
 }
 form{
-    margin: 10px;
     padding: 10px;
     border: 1px solid #666;
     border-radius: 20px;
     display: flex;
+    width: 70%;
+    margin: 10px auto;
+
 }
 form input {
+    background-color: transparent;
     padding: 5px;
     border: none;
     outline: none;
@@ -44,13 +54,13 @@ form button:hover{
     background-color: #333;
 }
 .lista{
-    padding: 5px;
+    padding: 10px;
     margin-top: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 13%;
+    margin-right: 13%;
 }
 div.item{
     text-align: center ;
@@ -66,4 +76,87 @@ div.item:hover{
 }
 div.item img{
     width: 100%;
+}
+nav{
+    position: relative;
+    margin-top: 10px;
+}
+ul li{
+    display: inline;
+}
+li{
+    padding: 8px;
+}
+ul{
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 30px;
+    margin-right: 30px;
+
+}
+#casa{
+    width: 35px;
+    padding: 9px;
+}
+#casa:hover{
+    transition: 0.5s;
+    background-color: white;
+    border-radius: 75%;
+}
+
+.logos{
+    width: 35px;
+    padding: 10px;
+}
+.logos:hover{
+    transition: 0.5s;
+    background-color: white;
+    border-radius: 75%;
+}
+#headDoc{
+    display: flex;
+    justify-content: center;
+}
+.ulDoc{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.liDoc{
+    align-items: center;
+}
+.docPai{
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.16);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.16);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.16);
+    margin-left: 50%;
+    transform: translate(-50%);
+
+}
+.docFil1{
+    border: 2px solid white;
+    height: 400px;
+    width: 400px;
+    background-color: white;
+    justify-content: center;
+    display: flex;
+    
+}
+.docFil1 img{
+    width: fit-content;
+}
+.docFil2{
+    border: 2px solid white;
+    height: 400px;
+    width: 700px;
+    background-color: transparent;
+    color: #fff;
+    text-align: center;
+    text-align: justify;
+}
+.docFil2 p{
+    padding: 30px;
 }
