--- a/style.css
+++ b/style.css
@@ -155,6 +155,93 @@ ul{
     background-color: transparent;
     color: #fff;
     text-align: center;
+    /*
+.testeR{
+    background-color: #333;
+    height: 400px;
+    width: 1024px;
+}
+
+/*responsividade*/
+@media screen and (max-width: 390px) {
+    body{
+        background-color: rgba(13,31,35,1);
+        background-size:  390px;
+        background-repeat: no-repeat;
+        color: #fff;
+    }
+    main{
+        margin: 0;
+        padding: 0;
+        max-width: 390px;
+    }
+    header{
+        max-width: 390px;
+        margin-top: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+    nav, ul, li{
+        max-width: 80%;
+        justify-self: flex-end;
+        padding: 0;
+    }
+    form{
+        width: 250px;
+        margin: 1px;
+    }
+    form input{
+        max-width: 70%;
+    }
+}
+@media screen and (min-width: 481px)and (max-width: 768px) {
+    
+    main{
+        margin: 0;
+        padding: 0;
+        max-width: 768px;
+    }
+    header{
+        max-width: 768px;
+    }
+    nav, ul, li{
+        max-width: 100%;
+        justify-self: flex-end;
+    }
+    form{
+        width: 300px;
+        margin: 3px;
+    }
+    form input{
+        max-width: 70%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    main{
+        margin: 0;
+        padding: 0;
+        max-width: 1024px;
+    }
+    header{
+        max-width: 1024px;
+    }
+    nav, ul, li{
+        max-width: 100%;
+        justify-self: flex-end;
+    }
+    form{
+        width: 300px;
+        margin: 3px;
+    }
+    form input{
+        max-width: 70%;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+
+}
     text-align: justify;
 }
 .docFil2 p{
